--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -88,16 +88,16 @@
 
 
 @{ 
-var client = NemocniceData.Client();
-Data lastNem = client.Search<Data>(s => s
-    .Size(1)
-    .Sort(o => o.Descending(f => f.lastUpdated))
-    .Query(q => q.MatchAll())
-)
-.Hits
-.Select(m => m.Source)
-.First();
-    var diffNem = client.Get<Data>("20200918-1440").Source;
+    var client = NemocniceData.Client();
+    NemocniceOnlyData lastNem = client.Search<NemocniceOnlyData>(s => s
+        .Size(1)
+        .Sort(o => o.Descending(f => f.lastUpdated))
+        .Query(q => q.MatchAll())
+    )
+    .Hits
+    .Select(m => m.Source)
+    .First();
+    var startNem = client.Get<NemocniceOnlyData>("20200918-1440").Source;
 
 }
 <h2 id="nemocnice">Seznam jednotlivých nemocnic <small>Stav k @(lastNem.lastUpdated.ToString("dd. MM. HH")):00</small></h2>
@@ -123,11 +123,11 @@ tbl_nem_o = $('#nem_o').DataTable({
             <td>Nemocnice</td>
             <td>Region</td>
             <td>Údaje nemocnice zaslala naposledy</td>
-            <td>Lůžka ARO+JIP dosp.<br />(COVID / neCOVID)</td>
-            <td>Lůžka s kyslíkem<br />(COVID / neCOVID)</td>
-            <td>Přístroje ECMO</td>
-            <td>Přístroje UPV</td>
-            <td>Přístroje CRRT</td>
+            <td>Volná lůžka ARO+JIP dosp.<br />(COVID / neCOVID)</td>
+            <td>Volná lůžka s kyslíkem<br />(COVID / neCOVID)</td>
+            <td>Volné přístroje ECMO</td>
+            <td>Volné přístroje UPV</td>
+            <td>Volné přístroje CRRT</td>
             <td>Lékaři</td>
             <td>Sestry</td>
             <td>Ventilátory sál</td>
@@ -137,14 +137,14 @@ tbl_nem_o = $('#nem_o').DataTable({
     <tbody>
         @foreach (var h in lastNem.hospitals)
         {
-            Data.Hospital dh = diffNem.hospitals.FirstOrDefault(m => m.nemocniceID == h.nemocniceID);
-            if (dh == null)
+            NemocniceOnlyData.Hospital diffNem = startNem.hospitals.FirstOrDefault(m => m.nemocniceID == h.nemocniceID);
+            if (diffNem == null)
             {
-                dh = new Data.Hospital();
+                diffNem = new NemocniceOnlyData.Hospital();
             }
-
+            var dh = NemocniceOnlyData.Diff(diffNem, h);
             <tr>
-                <td>@h.name<br />(změna od @diffNem.lastUpdated.ToString("dd.MM.") do @h.lastModified.ToString("dd.MM."))</td>
+                <td>@h.name<br />(změna od @startNem.lastUpdated.ToString("dd.MM.") do @h.lastModified.ToString("dd.MM."))</td>
                 <td>@h.regionFull()</td>
                 <td data-order="@h.lastModified.Ticks">@(h.lastModified.ToString("dd.MM."))<br/>@(h.lastModified.ToString("HH:ss"))</td>
                 <td style='white-space: nowrap;font-weight:bold;' data-order="@h.AROJIP_luzka_covid">@h.AROJIP_luzka_covid / @h.AROJIP_luzka_necovid z @h.AROJIP_luzka_celkem
@@ -402,199 +402,4 @@ var chartdata = timedata.Select(m => new
 
 @functions {
 
-    public class Data
-    {
-        public Data() { }
-
-        [Nest.Date]
-        public DateTime lastUpdated { get; set; }
-        public Hospital[] hospitals { get; set; }
-
-        public class Hospital
-        {
-            
-            public string regionFull()
-            {
-                switch (this.region)
-                {
-                    case "HKK": return "Královéhradecký kraj";
-                    case "JHC": return "Jihočeský kraj";
-                    case "JHM": return "Jihomoravský kraj";
-                    case "KVK": return "Karlovarský kraj";
-                    case "LBK": return "Liberecký kraj";
-                    case "MSK": return "Moravskoslezský kraj";
-                    case "OLK": return "Olomoucký kraj";
-                    case "PAK": return "Pardubický kraj";
-                    case "PHA": return "Praha";
-                    case "PLK": return "Plzeňský kraj";
-                    case "STC": return "Středočeský kraj";
-                    case "ULK": return "Ústecký kraj";
-                    case "VYS": return "Kraj Vysočina";
-                    case "ZLK": return "Zlínský kraj";
-                    case "CR": return "Česká republika";
-                    default:
-                        return "";
-
-                }
-            }
-            public int nemocniceID { get; set; }
-            public string name { get; set; }
-
-            [Nest.Keyword]
-            public string region { get; set; }
-            [Nest.Date]
-            public DateTime lastModified { get; set; }
-
-            //ECMO plicni rizeni, podpora nejvaznejsich pripadu, dela i metabolicke veci
-            public int ECMO_volna { get; set; }
-            public int ECMO_celkem { get; set; }
-            public decimal ECMO_perc() => (ECMO_celkem == 0 ? 0 : (decimal)ECMO_volna / (decimal)ECMO_celkem);
-
-            //Uplna plicni ventilace
-            public int UPV_volna { get; set; }
-            public int UPV_celkem { get; set; }
-            public decimal UPV_perc() => (UPV_celkem == 0 ? 0 : (decimal)UPV_volna / (decimal)UPV_celkem);
-
-            //CRRT - kontinualni dialyza, tezke pripady, selhani ledvin
-            public int CRRT_volna { get; set; }
-            public int CRRT_celkem { get; set; }
-            public decimal CRRT_perc() => (CRRT_celkem == 0 ? 0 : (decimal)CRRT_volna / (decimal)CRRT_celkem);
-
-            //IHD - intermitetni dialyza, co nejede kontinualne
-            public int IHD_volna { get; set; }
-            public int IHD_celkem { get; set; }
-            public decimal IHD_perc() => (IHD_volna == 0 ? 0 : (decimal)IHD_volna / (decimal)IHD_celkem);
-
-
-            public int AROJIP_luzka_celkem { get; set; }
-            public int AROJIP_luzka_covid { get; set; }
-            public int AROJIP_luzka_necovid { get; set; }
-            public decimal AROJIP_perc() => (AROJIP_luzka_celkem == 0 ? 0 : ((decimal)AROJIP_luzka_covid + (decimal)AROJIP_luzka_necovid) / (decimal)AROJIP_luzka_celkem);
-
-            public int Standard_luzka_s_kyslikem_celkem { get; set; }
-            public int Standard_luzka_s_kyslikem_covid { get; set; }
-            public int Standard_luzka_s_kyslikem_necovid { get; set; }
-            public decimal Standard_luzka_s_kyslikem_perc() => (Standard_luzka_s_kyslikem_celkem == 0 ? 0 : ((decimal)Standard_luzka_s_kyslikem_covid + (decimal)Standard_luzka_s_kyslikem_necovid) / (decimal)Standard_luzka_s_kyslikem_celkem);
-
-
-
-            public int Lekari_AROJIP_celkem { get; set; }
-            public int Sestry_AROJIP_celkem { get; set; }
-            public int Ventilatory_prenosne_celkem { get; set; }
-            public int Ventilatory_operacnisal_celkem { get; set; }
-            public int Standard_luzka_celkem { get; set; }
-            public int Standard_luzka_s_monitor_celkem { get; set; }
-        }
-
-        public static Data Diff(Data f, Data l)
-        {
-            Data d = new Data();
-            d.lastUpdated = new DateTime((l.lastUpdated - f.lastUpdated).Ticks);
-            List<Data.Hospital> hs = new List<Hospital>();
-            foreach (var fh in f.hospitals)
-            {
-                Hospital h = new Hospital();
-                Hospital lh = l.hospitals.FirstOrDefault(m => m.nemocniceID == fh.nemocniceID);
-                if (lh != null)
-                {
-
-                    hs.Add(Diff(fh, lh));
-                }
-
-            }
-            d.hospitals = hs.ToArray();
-            return d;
-        }
-
-        public static Hospital Diff(Hospital fh, Hospital lh)
-        {
-            Hospital h = new Hospital();
-            h.lastModified = new DateTime(Math.Abs((lh.lastModified - fh.lastModified).Ticks));
-
-            h.AROJIP_luzka_celkem = lh.AROJIP_luzka_celkem - fh.AROJIP_luzka_celkem;
-            h.AROJIP_luzka_covid = lh.AROJIP_luzka_covid - fh.AROJIP_luzka_covid;
-            h.AROJIP_luzka_necovid = lh.AROJIP_luzka_necovid - fh.AROJIP_luzka_necovid;
-            h.CRRT_celkem = lh.CRRT_celkem - fh.CRRT_celkem;
-            h.CRRT_volna = lh.CRRT_volna - fh.CRRT_volna;
-            h.ECMO_celkem = lh.ECMO_celkem - fh.ECMO_celkem;
-            h.ECMO_volna = lh.ECMO_volna - fh.ECMO_volna;
-
-            h.IHD_celkem = lh.IHD_celkem - fh.IHD_celkem;
-            h.IHD_volna = lh.IHD_volna - fh.IHD_volna;
-            h.Lekari_AROJIP_celkem = lh.Lekari_AROJIP_celkem - fh.Lekari_AROJIP_celkem;
-            h.name = lh.name;
-            h.nemocniceID = lh.nemocniceID;
-            h.region = lh.region;
-            h.Sestry_AROJIP_celkem = lh.Sestry_AROJIP_celkem - fh.Sestry_AROJIP_celkem;
-            h.Standard_luzka_celkem = lh.Standard_luzka_celkem - fh.Standard_luzka_celkem;
-            h.Standard_luzka_s_kyslikem_celkem = lh.Standard_luzka_s_kyslikem_celkem - fh.Standard_luzka_s_kyslikem_celkem;
-            h.Standard_luzka_s_kyslikem_covid = lh.Standard_luzka_s_kyslikem_covid - fh.Standard_luzka_s_kyslikem_covid;
-            h.Standard_luzka_s_kyslikem_necovid = lh.Standard_luzka_s_kyslikem_necovid - fh.Standard_luzka_s_kyslikem_necovid;
-            h.Standard_luzka_s_monitor_celkem = lh.Standard_luzka_s_monitor_celkem - fh.Standard_luzka_s_monitor_celkem;
-            h.UPV_celkem = lh.UPV_celkem - fh.UPV_celkem;
-            h.UPV_volna = lh.UPV_volna - fh.UPV_volna;
-            h.Ventilatory_operacnisal_celkem = lh.Ventilatory_operacnisal_celkem - fh.Ventilatory_operacnisal_celkem;
-            h.Ventilatory_prenosne_celkem = lh.Ventilatory_prenosne_celkem - fh.Ventilatory_prenosne_celkem;
-            return h;
-        }
-
-        public static Hospital Aggregate(IEnumerable<Hospital> hospitals)
-        {
-            Hospital h = new Hospital();
-
-            h.AROJIP_luzka_celkem = hospitals.Sum(m => m.AROJIP_luzka_celkem);
-            h.AROJIP_luzka_covid = hospitals.Sum(m => m.AROJIP_luzka_covid);
-            h.AROJIP_luzka_necovid = hospitals.Sum(m => m.AROJIP_luzka_necovid);
-            h.CRRT_celkem = hospitals.Sum(m => m.CRRT_celkem);
-            h.CRRT_volna = hospitals.Sum(m => m.CRRT_volna);
-            h.ECMO_celkem = hospitals.Sum(m => m.ECMO_celkem);
-            h.ECMO_volna = hospitals.Sum(m => m.ECMO_volna);
-
-
-            h.lastModified = hospitals.Max(m => m.lastModified);
-            h.IHD_celkem = hospitals.Sum(m => m.IHD_celkem);
-            h.IHD_volna = hospitals.Sum(m => m.IHD_volna);
-            h.Lekari_AROJIP_celkem = hospitals.Sum(m => m.Lekari_AROJIP_celkem);
-            h.name = "";
-            h.nemocniceID = 0;
-            h.region = hospitals.First().region;
-            h.Sestry_AROJIP_celkem = hospitals.Sum(m => m.Sestry_AROJIP_celkem);
-            h.Standard_luzka_celkem = hospitals.Sum(m => m.Standard_luzka_celkem);
-            h.Standard_luzka_s_kyslikem_celkem = hospitals.Sum(m => m.Standard_luzka_s_kyslikem_celkem);
-            h.Standard_luzka_s_kyslikem_covid = hospitals.Sum(m => m.Standard_luzka_s_kyslikem_covid);
-            h.Standard_luzka_s_kyslikem_necovid = hospitals.Sum(m => m.Standard_luzka_s_kyslikem_necovid);
-            h.Standard_luzka_s_monitor_celkem = hospitals.Sum(m => m.Standard_luzka_s_monitor_celkem);
-            h.UPV_celkem = hospitals.Sum(m => m.UPV_celkem);
-            h.UPV_volna = hospitals.Sum(m => m.UPV_volna);
-            h.Ventilatory_operacnisal_celkem = hospitals.Sum(m => m.Ventilatory_operacnisal_celkem);
-            h.Ventilatory_prenosne_celkem = hospitals.Sum(m => m.Ventilatory_prenosne_celkem);
-
-            return h;
-        }
-        public static DateTime? ToDateTime(string value, params string[] formats)
-        {
-            if (string.IsNullOrEmpty(value))
-                return null;
-            foreach (var f in formats)
-            {
-                var dt = ToDateTime(value, f);
-                if (dt.HasValue)
-                    return dt;
-            }
-            return null;
-        }
-
-        public static DateTime? ToDateTime(string value, string format)
-        {
-            if (string.IsNullOrEmpty(value))
-                return null;
-
-            DateTime tmp;
-            if (DateTime.TryParseExact(value, format, System.Globalization.CultureInfo.InvariantCulture, System.Globalization.DateTimeStyles.AssumeLocal | System.Globalization.DateTimeStyles.AllowWhiteSpaces, out tmp))
-                return new DateTime?(tmp);
-            else
-                return null;
-        }
-
-    }
 }
