--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -238,6 +238,9 @@ var chartdata = timedata.Select(m => new
                     ),
                     (name:"ARO+JIP volná COVID lůžka", 
                         values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.AROJIP_luzka_covid } )
+                    ),
+                    (name:"ARO+JIP COVID lůžka celkem", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.AROJIP_luzka_celkem } )
                     )
                 },
                 "","počet",200, minY:0 )
@@ -261,8 +264,10 @@ var chartdata = timedata.Select(m => new
                     ),
                     (name:"volná COVID lůžka s kyslíkem", 
                         values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Standard_luzka_s_kyslikem_covid} )
-                    )
-                },
+                    ),
+                    (name:"COVID lůžka s kyslíkem celkem", 
+                        values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Standard_luzka_s_kyslikem_celkem} )
+                    )                },
                 "","počet",200, minY:0 )
         </p>
     </div>
