--- a/Web.Statu/Views/Kindex/Index.cshtml
+++ b/Web.Statu/Views/Kindex/Index.cshtml
@@ -148,7 +148,7 @@
 
             <div class="block-col block-part">
                 <div class="block-subtitle">
-                    Můžete si také porovnat jednotlivé složky kindexu u organizací mezi sebou.
+                    Můžete si také porovnat jednotlivé složky K-Indexu u organizací mezi sebou.
                 </div>
                 <div class="block-tags">
                     <a href="/kindex/porovnat/00006947,70856508,70994234,65993390,00064581" class="tag">Subjekty s největším finančním objemem smluv</a>
