--- a/Web.Statu/Views/Home/KapacitaKazdeNemocnice_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaKazdeNemocnice_child.cshtml
@@ -36,7 +36,12 @@
 
 
 
-
+<script>
+    var hs = parseInt(window.location.hash.replace("#",""));
+    if (Number.isInteger(hs)) {
+        window.location.replace("/kapacitaKazdeNemocnice/"+hs);
+    }
+</script>
 
 
 <div class="jumbotron">
